# badcv

./: findCourt.ipynb  pyproject.toml
