[tool.poetry]
name = "cvlab"
version = "0.1.0"
description = ""
authors = ["ShiWei <shiwei@leyantech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.2.5"
pydantic = "^2.9.2"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
numpy = "^2.1.2"


[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
